prost-reflect/tests/snapshots/main__name_resolution2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name '.FooBar' is not defined"
related: []
severity: error

