prost-reflect/tests/snapshots/main__name_resolution4.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
help: "The innermost scope is searched first in name resolution. Consider using a leading '.' (i.e., '.foo.FooBar') to start from the outermost scope."
labels: []
message: "'foo.FooBar' resolves to 'com.foo.FooBar', which is not defined"
related: []
severity: error
