prost-reflect/tests/snapshots/main__option_already_set.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "option field 'deprecated' has already been set"
related: []
severity: error

