prost-reflect/tests/snapshots/main__option_extension_dependency_not_imported.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
help: "'unknown.extension' is defined in 'dep.proto', which is not imported by 'test.proto'"
labels: []
message: "name 'unknown.extension' is not defined"
related: []
severity: error

