prost-reflect/tests/snapshots/main__option_extension_invalid_type.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "'extension' is not an extension"
related: []
severity: error

