prost-reflect/tests/snapshots/main__option_extension_wrong_extendee.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "expected an extension to type 'google.protobuf.FileOptions', but 'extension' extends 'google.protobuf.FieldOptions'"
related: []
severity: error

