prost-reflect/tests/snapshots/main__option_map_entry_set_explicitly.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - messageType:
      - name: Foo
        options:
          mapEntry: true
    name: test.proto

