prost-reflect/tests/snapshots/main__option_resolution1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - dependency:
      - google/protobuf/descriptor.proto
    extension:
      - extendee: ".google.protobuf.FileOptions"
        jsonName: foo
        label: LABEL_OPTIONAL
        name: foo
        number: 1001
        type: TYPE_MESSAGE
        typeName: ".Foo"
    messageType:
      - field:
          - jsonName: a
            label: LABEL_OPTIONAL
            name: a
            number: 1
            type: TYPE_INT32
          - jsonName: b
            label: LABEL_OPTIONAL
            name: b
            number: 2
            type: TYPE_INT32
        name: Foo
    name: test.proto
    options:
      "[foo]":
        a: 1
        b: 1
      optimizeFor: SPEED

