prost-reflect/tests/snapshots/main__option_resolution13.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - dependency:
      - google/protobuf/descriptor.proto
    extension:
      - extendee: ".google.protobuf.FileOptions"
        jsonName: a
        label: LABEL_REPEATED
        name: a
        number: 1001
        type: TYPE_MESSAGE
        typeName: ".Foo"
    messageType:
      - field:
          - jsonName: foo
            label: LABEL_REPEATED
            name: foo
            number: 1
            type: TYPE_INT32
        name: Foo
    name: test.proto
    options:
      "[a]":
        - foo:
            - 1
            - 2
            - 3

